--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 
   <body>
-    Hello there, awesome person! 
+    <head>
+    <title>Hello there, awesome person!</title>
+    </head>
   </body>
 
 </html>
