--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
         <title>My awesome web page</title>
     </head>
 
-  <body>
+ <h1> <body> <h1>
     <head>
     <title>Hello there, awesome person!</title>
     </head>
-  </body>
+ </h1> </body> </h1>
 
 </html>
