--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
 
  <h1> <body> <h1>
+     <img src="https://avatars.githubusercontent.com/u/79071247?v=4">
     <head>
     <title>Hello there, awesome person!</title>
     </head>
