--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title>My awesome web page</title>
     </head>
 
- <h1> <body> <h1>
+<img src="https://avatars.githubusercontent.com/u/79071247?v=4">
+
      <img src="https://avatars.githubusercontent.com/u/79071247?v=4">
     <head>
     <title>Hello there, awesome person!</title>
