--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
     <head>
         <title>My awesome web page</title>
     </head>
-
+    
+<h1> <body> <h1>
 <img src="https://avatars.githubusercontent.com/u/79071247?v=4">
 
      <img src="https://avatars.githubusercontent.com/u/79071247?v=4">
-    <head>
+    <ul>
+    <li>Underwear</li>
+    <li>Pyjamas</li>
+    <li>Home</li>
+</ul>
     <title>Hello there, awesome person!</title>
-    </head>
+    
  </h1> </body> </h1>
 
 </html>
