--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>My awesome web page</title>
+        <title>ZyHub</title>
         <link rel="stylesheet" href="style.css">
     </head>
     
@@ -9,12 +9,13 @@
 
      <img src="https://avatars.githubusercontent.com/u/79071247?v=4">
     <ul>
-    <li>Underwear</li><li><a href="https://ramzyrsr.github.io/underwear">This is a link to GitHub!</a></li>
-    <li>Pyjamas</li><li><a href="https://github.com">This is a link to GitHub!</a></li>
-    <li>Home</li><li><a href="https://ramzyrsr.github.io">This is a link to GitHub!</a></li>
+    <li>Home</li><li><a href="https://ramzyrsr.github.io/intro-html/">My Home!</a></li>
+    <li>Underwear</li><li><a href="https://ramzyrsr.github.io/underwear">Cuddle Care</a></li>
+    <li>Pyjamas</li><li><a href="https://github.com">Beautiful</a></li>
 </ul>
+    <head>
     <title>Hello there, awesome person!</title>
-    
+    </head>
  </h1> </body> </h1>
 
 </html>
