--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <img src="https://avatars.githubusercontent.com/u/79071247?v=4">
         <nav>
     <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#cuddle">Cuddle Care</a></li>
-    <li><a href="#contact">Beautiful</a></li>
+    <li><a href="https://ramzyrsr.github.io/intro-html/">Home</a></li>
+    <li><a href="https://ramzyrsr.github.io/cuddle/.new_page.html">Cuddle Care</a></li>
+    <li><a href="https://ramzyrsr.github.io/contact/">Beautiful</a></li>
     </ul>
         <nav>
     </header>
@@ -46,13 +46,13 @@
           <li><a href=”https://www.facebook.com/user/ramzyrsr“>Facebook</a></li>
           <li><a href=”https://www.instagram.com/ramzyrsr.co/“>Instagram</a></li>
         </ul>
-      <p>Or, send us an email on <a href=”ramzy.sr********@gmail.com“></a>.</p>
+      <p>Or, send us an email on <a href=”ramzy.sr********@gmail.com“></a>Email</p>
     </div>
   </section>
 </main>
 
 <footer>
-    © Copyright Cuddle Care, 2019
+    © Copyright Cuddle Care, 2021
 </footer>
 </body>
 </html>
